# RoughPy

./: meson.build
algebra/: meson.build
core/: CMakeLists.txt  meson.build
intervals/: meson.build
platform/: meson.build
roughpy/: meson.build
scalars/: meson.build
streams/: meson.build
